# brunnr

./: .env.example  .gitignore  AGENTS.md  ARTESIAN.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md  docker-compose.yml  justfile  llms.txt  mkdocs.yml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md
benchmarks/comparison/: README.md
benchmarks/results/large-corpus/: aggregate.json  charts.txt  summary.csv
benchmarks/results/large-source-run/: aggregate.json  charts.txt  checksums.txt  summary.csv
benchmarks/results/mega-corpus/: aggregate.json  charts.txt  summary.csv
benchmarks/results/mid-corpus/: aggregate.json  charts.txt  checksums.txt  summary.csv
benchmarks/results/sample-run/: aggregate.json  charts.txt  summary.csv
benchmarks/results/session-corpus/: aggregate.json  charts.txt  checksums.txt  summary.csv
benchmarks/results/xl-corpus/: aggregate.json  charts.txt  checksums.txt  summary.csv
benchmarks/seed-corpus/: tasks.json
benchmarks/seed-corpus/distractors/: deploy-strategy-v1.md  payment-general.md
benchmarks/seed-corpus/memory/: deploy-strategy-v2.md  payment-idempotency.md  payment-timeout.md
benchmarks/tools/: generate_corpus.py  generate_large_source_corpus.py  plot_scaling.py
bindings/python/: .gitignore  Cargo.toml  README.md  pyproject.toml
bindings/python/examples/: quickstart.py
bindings/python/python/artesian/: __init__.py
bindings/python/src/: lib.rs
crates/aquifer/src/: anchor.rs  backend.rs  backfill.rs  consolidation.rs  entity.rs  event.rs  files.rs  graph.rs  identity.rs  lib.rs  mmr.rs  pgvector.rs  qdrant.rs  semantic_cache.rs  session.rs  sqlite_vec.rs  temporal.rs  txn.rs  types.rs  vector.rs  vector_memory.rs
crates/aquifer/tests/: anchor.rs  bulk_import.rs  concurrency.rs  files_backend.rs  linked_import.rs  memory_backend_contract.rs  qdrant.rs  quantization.rs  rrf.rs  session.rs
crates/artesian-bench/tests/: qdrant.rs
crates/artesian-cli/: Cargo.toml
crates/artesian-cli/src/: import.rs  main.rs  runtime.rs
crates/artesian-cli/tests/: cli.rs  process_shutdown.rs
crates/artesian-core/src/: config.rs  lib.rs
crates/artesian-core/tests/: config_contract.rs
crates/artesian-mcp/: Cargo.toml
crates/artesian-mcp/memory/: log.md
crates/artesian-mcp/src/: cli.rs  lib.rs  main.rs
crates/artesian-mcp/tests/: memory_tools.rs
crates/artesian-process-agent/src/: lib.rs
crates/basin/src/: lib.rs
crates/brunnr-bench/src/: main.rs
crates/brunnr-cli/: Cargo.toml
crates/brunnr-cli/src/: brunnrd.rs  main.rs  runtime.rs
crates/brunnr-cli/tests/: cli.rs  process_shutdown.rs
crates/brunnr-core/src/: agent.rs  config.rs  event.rs  lib.rs
crates/brunnr-mcp/: Cargo.toml
crates/brunnr-mcp/src/: lib.rs  main.rs
crates/brunnr-mcp/tests/: memory_tools.rs
crates/brunnr-process-agent/: Cargo.toml
crates/brunnr-process-agent/src/: lib.rs
crates/flume/: Cargo.toml
crates/flume/src/: consolidation.rs  lib.rs  loop_core.rs  quota.rs
crates/flume/tests/fixtures/: claude-usage.json  codex-rate-limits.json
crates/gauge/: Cargo.toml
crates/gauge/src/: eval.rs  lib.rs  retrieval_regression.rs
crates/headgate/src/: bundle.rs  controller.rs  fact.rs  lib.rs
crates/headgate/tests/: cycle.rs
crates/headrace/src/: vector.rs
crates/hird/: Cargo.toml
crates/hird/src/: lib.rs
crates/hvergelmir/src/: lib.rs
crates/mimisbrunnr/: Cargo.toml
crates/mimisbrunnr/src/: backend.rs  backfill.rs  chunking.rs  files.rs  identity.rs  lib.rs  qdrant.rs  sqlite_vec.rs  types.rs  upgrade.rs  vector.rs  vector_memory.rs
crates/mimisbrunnr/tests/: backfill.rs  files_backend.rs  memory_backend_contract.rs  qdrant.rs  rechunk.rs
crates/wellfield/: Cargo.toml
crates/wellfield/src/: lib.rs
deploy/qdrant/: compose.yml
docs/: README.md  architecture.md  backends.md  composability.md  concurrency.md  loop-engineering.md  memory.md  modes.md  onboarding.md  orchestration.md  positioning.md  roadmap.md  self-repair.md  sizing-and-deployment.md  teams.md  why-rust.md
docs/diagrams/: system-map.mmd  wellfield-team.drawio
