# SPDX-License-Identifier: Apache-2.0

[workspace]
resolver = "2"
members = [
    "crates/artesian",
    "crates/artesian-core",
    "crates/aquifer",
    "crates/sandbox",
    "crates/wellfield",
    "crates/gauge",
    "crates/artesian-mcp",
    "crates/artesian-cli",
    "crates/artesian-bench",
    "crates/artesian-process-agent",
    "crates/artesian-test-support",
    "crates/headrace",
    "crates/headgate",
    "crates/basin",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0"
artesian-test-support = { path = "crates/artesian-test-support" }
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "=4.5.23", features = ["derive", "env"] }
fastembed = { version = "5.16.1", default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries-rustls-tls"] }
futures-core = "0.3"
futures-util = "0.3"
wellfield = { path = "crates/wellfield" }
aquifer = { path = "crates/aquifer" }
nix = { version = "0.29", features = ["process", "signal"] }
pgvector = { version = "0.4", features = ["postgres"] }
qdrant-client = { version = "1.18.0", default-features = false, features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
rmcp = "1.7.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
schemars = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
sqlite-vec = "0.1.10-alpha.4"
thiserror = "2.0"
tiktoken-rs = "0.12.0"
tokio = { version = "1.48", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
toml_edit = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
derive_partial_eq_without_eq = "warn"
large_futures = "warn"
manual_let_else = "warn"
