# SPDX-License-Identifier: Apache-2.0

[package]
name = "artesian-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
artesian-core = { path = "../artesian-core" }
chrono.workspace = true
artesian-process-agent = { path = "../artesian-process-agent" }
clap.workspace = true
wellfield.workspace = true
sandbox = { path = "../sandbox" }
aquifer = { path = "../aquifer" }
serde.workspace = true
serde_json.workspace = true
headrace = { path = "../headrace" }
headgate = { path = "../headgate" }
tokio.workspace = true
toml.workspace = true
toml_edit.workspace = true
basin = { path = "../basin" }

[features]
qdrant = ["aquifer/qdrant"]
llm = ["headgate/llm"]

[[bin]]
name = "artesian"
path = "src/main.rs"

[[bin]]
name = "artesiand"
path = "src/artesiand.rs"

[dev-dependencies]
artesian-test-support.workspace = true

[lints]
workspace = true
