# SPDX-License-Identifier: Apache-2.0

[package]
name = "brunnr-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
brunnr-core = { path = "../brunnr-core" }
brunnr-process-agent = { path = "../brunnr-process-agent" }
clap.workspace = true
hird.workspace = true
mimisbrunnr = { path = "../mimisbrunnr" }
rmcp = { workspace = true, features = ["transport-io"] }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thingr = { path = "../thingr" }
tokio.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true

[features]
qdrant = ["mimisbrunnr/qdrant"]

[dev-dependencies]
brunnr-test-support.workspace = true

[lints]
workspace = true
