# SPDX-License-Identifier: Apache-2.0

[package]
name = "flume"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
artesian-core = { path = "../artesian-core" }
artesian-process-agent = { path = "../artesian-process-agent" }
aquifer = { path = "../aquifer" }
chrono.workspace = true
headgate = { path = "../headgate" }
headrace = { path = "../headrace" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
artesian-test-support.workspace = true

[lints]
workspace = true
