# SPDX-License-Identifier: Apache-2.0

[package]
name = "gauge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
llm = ["headgate/llm", "dep:futures-util"]
# Vector recall for the QA eval (real VectorMemoryBackend + fastembed via aquifer).
vector = ["dep:aquifer", "dep:futures-util"]

[dependencies]
headgate = { path = "../headgate" }
aquifer = { path = "../aquifer", optional = true }
futures-util = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[[bin]]
name = "gauge-bench"
path = "src/bin/gauge_bench.rs"

[[bin]]
name = "gauge-eval"
path = "src/bin/gauge_eval.rs"

[dev-dependencies]
futures-util.workspace = true

[lints]
workspace = true
