# SPDX-License-Identifier: Apache-2.0

[package]
name = "hird"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
brunnr-core = { path = "../brunnr-core" }
brunnr-process-agent = { path = "../brunnr-process-agent" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
thingr = { path = "../thingr" }
tokio.workspace = true

[dev-dependencies]
brunnr-test-support.workspace = true

[lints]
workspace = true
